Fix warning Java 17->11